Исправили код, скрипт немного другой

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
       cursor: grab;
       background-color: white;
     }
-  </style>  
+  </style> 
+  <script src="floors/floor0.js"></script>
+  <script src="floors/floor1.js"></script>
+  <script src="floors/floor2.js"></script>
+  <script src="floors/floor3.js"></script>
+  <script src="floors/floor4.js"></script>
+  <script src="floors/floor5.js"></script>
+  <script src="floors/floor6.js"></script>
+  <script src="floors/floor7.js"></script>
+  <script src="floors/floor8.js"></script>
 </head>
 <body>
 
@@ -55,7 +64,7 @@
         <span id="currentFloor" class="navbar-text">Этаж 1</span>
       </div>
       <div class="search-container ms-auto">
-        <input class="form-control" type="search" placeholder="Поиск..." aria-label="Поиск">
+        <input id="search" class="form-control" type="search" placeholder="Поиск..." aria-label="Поиск">
       </div>
     </div>
   </div>
