Сделаны все этажи, подключен поиск аудиторий и их подсвечивание

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <span id="currentFloor" class="navbar-text">Этаж 1</span>
       </div>
       <div class="search-container ms-auto">
-        <input id="search" class="form-control" type="search" placeholder="Поиск..." aria-label="Поиск">
+        <input id="searchInput" class="form-control" type="search" placeholder="Поиск..." aria-label="Поиск">
       </div>
     </div>
   </div>
