Финальная версия с адаптивностью под мобильные устройства

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <!-- Сайдбар с фиксированным позиционированием -->
-    <div id="sidebar" class="col-md-3 p-3" style="position: fixed; top: 60px; right: 0; bottom: 0; background: #f4f4f4; overflow-y: auto; z-index: 999; width: 300px;">
+    <div id="sidebar" class="col-md-3 p-3" style="position: fixed; top: 60px; right: 0; bottom: 0; background: #f4f4f4; overflow-y: auto; z-index: 999; ">
        <!-- Добавляем надпись перед списком аудиторий -->
       <div id="selectionInfo" class="mb-3">
         <p>Для снятия выделения нажмите повторно на аудиторию.</p>
