--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
   <link href="style.css" rel="stylesheet">
 
   <style>
-    #svg-map {
-      width: 100%;
-      height: 100vh;
-      position: relative;
-      cursor: grab;
-      background-color: white;
-    }
+
     
     /* Стиль для кнопки открытия сайдбара на мобильных */
     .sidebar-toggle {
@@ -46,9 +40,6 @@
         transform: translateX(0);
       }
       
-      #svg-map {
-        margin-right: 0 !important;
-      }
     }
   </style>
 
@@ -110,9 +101,9 @@
 </button>
 
   <!-- Контейнер с Flexbox для карты и сайдбара -->
-  <div class="container-fluid d-flex" style="height: 100vh; margin-top: 80px;">
+  <div class="container-fluid d-flex p-0 vh-100" style="height: 100vh; margin-top: 80px;">
     <!-- Карта с отступом от сайдбара -->
-    <div id="svg-map" class="col-md-9" style="margin-right: 300px; background-color: #eaeaea;">
+    <div id="svg-map" class="position-relative flex-grow-1">
       <!-- Здесь будет твоя карта -->
     </div>
 
