Финальная версия с адаптивностью под мобильные устройства

--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
 
   <!-- Контейнер с Flexbox для карты и сайдбара -->
   <div class="container-fluid d-flex p-0 vh-100" style="height: 100vh; margin-top: 80px;">
+    <div id="map-viewport" class="position-relative flex-grow-1">
+      <div id="svg-map-container"></div>
     <!-- Карта с отступом от сайдбара -->
-    <div id="svg-map" class="position-relative flex-grow-1">
+    <div id="svg-map">
       <!-- Здесь будет твоя карта -->
     </div>
 
