Финальная версия с адаптивностью под мобильные устройства

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div id="sidebar" class="col-md-3 p-3" style="position: fixed; top: 60px; right: 0; bottom: 0; background: #f4f4f4; overflow-y: auto; z-index: 999; ">
         <div id="selectionInfo" class="mb-3">
           <!-- Подсказка пользователю -->
-          <p>Для снятия выделения нажмите повторно на аудиторию.</p>
+          <p>Для снятия выделения нажмите на любое место карты.</p>
         </div> 
         <!-- Загрузка списка зон -->
         <div id="zoneListContainer"></div>
